crates/emux-term/tests/snapshots/golden_tests__scroll_in_region_up_preserves_history.snap
---
source: crates/emux-term/tests/golden_tests.rs
expression: result
---
drwxr-xr-x  5 undeadleech undeadleech 4.0K Feb 10 09:04 alacritty
[undeadleech@archhq alacritty]$ ls
alacritty                Cargo.toml       grid.json       rustfmt.toml
alacritty_config         CHANGELOG.md     INSTALL.md      scripts
alacritty_config_derive  config.json      LICENSE-APACHE  size.json
alacritty.recording      CONTRIBUTING.md  LICENSE-MIT     target
alacritty_terminal       docs             Makefile        TODO
Cargo.lock               extra            README.md
[undeadleech@archhq alacritty]$ ls
alacritty                Cargo.toml       grid.json       rustfmt.toml
alacritty_config         CHANGELOG.md     INSTALL.md      scripts
alacritty_config_derive  config.json      LICENSE-APACHE  size.json
alacritty.recording      CONTRIBUTING.md  LICENSE-MIT     target
alacritty_terminal       docs             Makefile        TODO
Cargo.lock               extra            README.md
[undeadleech@archhq alacritty]$ ls
alacritty                Cargo.toml       grid.json       rustfmt.toml
alacritty_config         CHANGELOG.md     INSTALL.md      scripts
alacritty_config_derive  config.json      LICENSE-APACHE  size.json
alacritty.recording      CONTRIBUTING.md  LICENSE-MIT     target
alacritty_terminal       docs             Makefile        TODO
Cargo.lock               extra            README.md
[undeadleech@archhq alacritty]$ ls
alacritty                Cargo.toml       grid.json       rustfmt.toml
alacritty_config         CHANGELOG.md     INSTALL.md      scripts
alacritty_config_derive  config.json      LICENSE-APACHE  size.json
alacritty.recording      CONTRIBUTING.md  LICENSE-MIT     target
alacritty_terminal       docs             Makefile        TODO
Cargo.lock               extra            README.md
[undeadleech@archhq alacritty]$
