crates/emux-term/tests/snapshots/golden_tests__scroll_up_reset.snap
---
source: crates/emux-term/tests/golden_tests.rs
expression: result
---
drwxr-xr-x  5 kchibisov kchibisov 4.0K Nov 13 20:02 alacritty_terminal
-rw-r--r--  1 kchibisov kchibisov  17K Nov 13 20:02 alacritty.yml
-rw-r--r--  1 kchibisov kchibisov 128K Nov 13 20:02 Cargo.lock
-rw-r--r--  1 kchibisov kchibisov  245 Nov  3 09:50 Cargo.toml
-rw-r--r--  1 kchibisov kchibisov  22K Nov 16 04:47 CHANGELOG.md
drwxr-xr-x  4 kchibisov kchibisov 4.0K Nov 13 20:02 ci
-rw-r--r--  1 kchibisov kchibisov 5.5K Nov 13 20:02 CONTRIBUTING.md
drwxr-xr-x  2 kchibisov kchibisov 4.0K Nov  3 09:50 .copr
drwxr-xr-x  5 kchibisov kchibisov 4.0K Nov 13 20:02 copypasta
drwxr-xr-x  2 kchibisov kchibisov 4.0K Sep 26 16:22 docs
[bold,underline,strike,fg:1][[bold,underline,strike,fg:1]k[bold,underline,strike,fg:1]c[bold,underline,strike,fg:1]h[bold,underline,strike,fg:1]i[bold,underline,strike,fg:1]b[bold,underline,strike,fg:1]i[bold,underline,strike,fg:1]s[bold,underline,strike,fg:1]o[bold,underline,strike,fg:1]v[bold,underline,strike,fg:1]@[bold,underline,strike,fg:1]N[bold,underline,strike,fg:1]i[bold,underline,strike,fg:1]g[bold,underline,strike,fg:1]h[bold,underline,strike,fg:1]t[bold,underline,strike,fg:1]L[bold,underline,strike,fg:1]o[bold,underline,strike,fg:1]r[bold,underline,strike,fg:1]d[bold,underline,strike,fg:1] [bold,underline,strike,fg:1]a[bold,underline,strike,fg:1]l[bold,underline,strike,fg:1]a[bold,underline,strike,fg:1]c[bold,underline,strike,fg:1]r[bold,underline,strike,fg:1]i[bold,underline,strike,fg:1]t[bold,underline,strike,fg:1]t[bold,underline,strike,fg:1]y[bold,underline,strike,fg:1]][bold,underline,strike,fg:1]$[bold,underline,strike,fg:1] [bold,underline,strike,fg:1]e[bold,underline,strike,fg:1]c[bold,underline,strike,fg:1]h[bold,underline,strike,fg:1]o[bold,underline,strike,fg:1] [bold,underline,strike,fg:1]-[bold,underline,strike,fg:1]e[bold,underline,strike,fg:1] [bold,underline,strike,fg:1]"[bold,underline,strike,fg:1]\[bold,underline,strike,fg:1]e[bold,underline,strike,fg:1][[bold,underline,strike,fg:1]1[bold,underline,strike,fg:1]0[bold,underline,strike,fg:1]M[bold,underline,strike,fg:1]"
drwxr-xr-x  2 kchibisov kchibisov 4.0K Nov  3 09:50 scripts
[bold,underline,strike,fg:1][[bold,underline,strike,fg:1]k[bold,underline,strike,fg:1]c[bold,underline,strike,fg:1]h[bold,underline,strike,fg:1]i[bold,underline,strike,fg:1]b[bold,underline,strike,fg:1]i[bold,underline,strike,fg:1]s[bold,underline,strike,fg:1]o[bold,underline,strike,fg:1]v[bold,underline,strike,fg:1]@[bold,underline,strike,fg:1]N[bold,underline,strike,fg:1]i[bold,underline,strike,fg:1]g[bold,underline,strike,fg:1]h[bold,underline,strike,fg:1]t[bold,underline,strike,fg:1]L[bold,underline,strike,fg:1]o[bold,underline,strike,fg:1]r[bold,underline,strike,fg:1]d[bold,underline,strike,fg:1] [bold,underline,strike,fg:1]a[bold,underline,strike,fg:1]l[bold,underline,strike,fg:1]a[bold,underline,strike,fg:1]c[bold,underline,strike,fg:1]r[bold,underline,strike,fg:1]i[bold,underline,strike,fg:1]t[bold,underline,strike,fg:1]t[bold,underline,strike,fg:1]y[bold,underline,strike,fg:1]][bold,underline,strike,fg:1]$[bold,underline,strike,fg:1]  4.0K Nov  3 09:50 servo-freetype-proxy
drwxr-xr-x  4 kchibisov kchibisov 4.0K Nov 12 16:22 target
-rw-r--r--  1 kchibisov kchibisov 1.7K Nov 13 20:02 .travis.yml
drwxr-xr-x  3 kchibisov kchibisov 4.0K Nov 13 20:02 winpty
[kchibisov@NightLord alacritty]$  printf "\e[31;1;4;9m"
[bold,underline,strike,fg:1][[bold,underline,strike,fg:1]k[bold,underline,strike,fg:1]c[bold,underline,strike,fg:1]h[bold,underline,strike,fg:1]i[bold,underline,strike,fg:1]b[bold,underline,strike,fg:1]i[bold,underline,strike,fg:1]s[bold,underline,strike,fg:1]o[bold,underline,strike,fg:1]v[bold,underline,strike,fg:1]@[bold,underline,strike,fg:1]N[bold,underline,strike,fg:1]i[bold,underline,strike,fg:1]g[bold,underline,strike,fg:1]h[bold,underline,strike,fg:1]t[bold,underline,strike,fg:1]L[bold,underline,strike,fg:1]o[bold,underline,strike,fg:1]r[bold,underline,strike,fg:1]d[bold,underline,strike,fg:1] [bold,underline,strike,fg:1]a[bold,underline,strike,fg:1]l[bold,underline,strike,fg:1]a[bold,underline,strike,fg:1]c[bold,underline,strike,fg:1]r[bold,underline,strike,fg:1]i[bold,underline,strike,fg:1]t[bold,underline,strike,fg:1]t[bold,underline,strike,fg:1]y[bold,underline,strike,fg:1]][bold,underline,strike,fg:1]$[bold,underline,strike,fg:1] [bold,underline,strike,fg:1]e[bold,underline,strike,fg:1]c[bold,underline,strike,fg:1]h[bold,underline,strike,fg:1]o[bold,underline,strike,fg:1] [bold,underline,strike,fg:1]-[bold,underline,strike,fg:1]e[bold,underline,strike,fg:1] [bold,underline,strike,fg:1]"[bold,underline,strike,fg:1]\[bold,underline,strike,fg:1]e[bold,underline,strike,fg:1][[bold,underline,strike,fg:1]1[bold,underline,strike,fg:1]0[bold,underline,strike,fg:1]H[bold,underline,strike,fg:1]"
