crates/emux-term/tests/snapshots/golden_tests__selective_erasure.snap
---
source: crates/emux-term/tests/golden_tests.rs
assertion_line: 193
expression: result
---
 B
 B
