crates/emux-term/tests/snapshots/golden_tests__tab_rendering.snap
---
source: crates/emux-term/tests/golden_tests.rs
expression: result
---
[fg:0,bg:9] [fg:0,bg:9]U[fg:0,bg:9]L[fg:0,bg:9] [fg:7,bg:8] [fg:7,bg:8]~[fg:7,bg:8]/[fg:7,bg:8]…[fg:7,bg:8]/[fg:7,bg:8]t[fg:7,bg:8]e[fg:7,bg:8]s[fg:7,bg:8]t[fg:7,bg:8]s[fg:7,bg:8]/[fg:7,bg:8]r[fg:7,bg:8]e[fg:7,bg:8]f[fg:7,bg:8]/[fg:7,bg:8]t[fg:7,bg:8]a[fg:7,bg:8]b[fg:7,bg:8]_[fg:7,bg:8]r[fg:7,bg:8]e[fg:7,bg:8]n[fg:7,bg:8]d[fg:7,bg:8]e[fg:7,bg:8]r[fg:7,bg:8]i[fg:7,bg:8]n[fg:7,bg:8]g[fg:7,bg:8] [fg:0,bg:9] [fg:0,bg:9]c[fg:0,bg:9]o[fg:0,bg:9]p[fg:0,bg:9]y[fg:0,bg:9]-[fg:0,bg:9]t[fg:0,bg:9]a[fg:0,bg:9]b[fg:0,bg:9]s[fg:0,bg:9]  echo '\tb\na\tb\naa\tb\naaa\tb\naaaa\tb\naaaaa\tb\naaaaaa\tb\naaaaaaa\t
b\naaaaaaaa\tb\naaaaaaaaa\tb\naaaaaaaaaa\tb'
        b
a       b
aa      b
aaa     b
aaaa    b
aaaaa   b
aaaaaa  b
aaaaaaa b
aaaaaaaa        b
aaaaaaaaa       b
aaaaaaaaaa      b
[fg:0,bg:9] [fg:0,bg:9]U[fg:0,bg:9]L[fg:0,bg:9] [fg:7,bg:8] [fg:7,bg:8]~[fg:7,bg:8]/[fg:7,bg:8]…[fg:7,bg:8]/[fg:7,bg:8]t[fg:7,bg:8]e[fg:7,bg:8]s[fg:7,bg:8]t[fg:7,bg:8]s[fg:7,bg:8]/[fg:7,bg:8]r[fg:7,bg:8]e[fg:7,bg:8]f[fg:7,bg:8]/[fg:7,bg:8]t[fg:7,bg:8]a[fg:7,bg:8]b[fg:7,bg:8]_[fg:7,bg:8]r[fg:7,bg:8]e[fg:7,bg:8]n[fg:7,bg:8]d[fg:7,bg:8]e[fg:7,bg:8]r[fg:7,bg:8]i[fg:7,bg:8]n[fg:7,bg:8]g[fg:7,bg:8] [fg:0,bg:9] [fg:0,bg:9]c[fg:0,bg:9]o[fg:0,bg:9]p[fg:0,bg:9]y[fg:0,bg:9]-[fg:0,bg:9]t[fg:0,bg:9]a[fg:0,bg:9]b[fg:0,bg:9]s[fg:0,bg:9]
