crates/emux-term/tests/snapshots/golden_tests__tmux_git_log.snap
---
source: crates/emux-term/tests/golden_tests.rs
expression: result
---
* [bold,fg:4]b[bold,fg:4]d[bold,fg:4]d[bold,fg:4]2[bold,fg:4]1[bold,fg:4]8[bold,fg:4]1 - [bold,fg:2]([bold,fg:2]2[bold,fg:2] [bold,fg:2]h[bold,fg:2]o[bold,fg:2]u[bold,fg:2]r[bold,fg:2]s[bold,fg:2] [bold,fg:2]a[bold,fg:2]g[bold,fg:2]o[bold,fg:2]) Add support for recording/running ref tests [fg:2]-[fg:2] [fg:2]J[fg:2]o[fg:2]e[fg:2] [fg:2]W[fg:2]i[fg:2]l[fg:2]m
[bold,fg:1] [bold,fg:1]([bold,fg:1]H[bold,fg:1]E[bold,fg:1]A[bold,fg:1]D[bold,fg:1] [bold,fg:1]-[bold,fg:1]>[bold,fg:1] [bold,fg:1]r[bold,fg:1]e[bold,fg:1]f[bold,fg:1]-[bold,fg:1]t[bold,fg:1]e[bold,fg:1]s[bold,fg:1]t[bold,fg:1]s[bold,fg:1],[bold,fg:1] [bold,fg:1]o[bold,fg:1]r[bold,fg:1]i[bold,fg:1]g[bold,fg:1]i[bold,fg:1]n[bold,fg:1]/[bold,fg:1]r[bold,fg:1]e[bold,fg:1]f[bold,fg:1]-[bold,fg:1]t[bold,fg:1]e[bold,fg:1]s[bold,fg:1]t[bold,fg:1]s[bold,fg:1])
[fg:1]| *   [bold,fg:4]d[bold,fg:4]6[bold,fg:4]2[bold,fg:4]9[bold,fg:4]f[bold,fg:4]7[bold,fg:4]2 - [bold,fg:2]([bold,fg:2]2[bold,fg:2] [bold,fg:2]d[bold,fg:2]a[bold,fg:2]y[bold,fg:2]s[bold,fg:2] [bold,fg:2]a[bold,fg:2]g[bold,fg:2]o[bold,fg:2]) WIP on master: d97996e Make bindings configurable f
rom alacritty.yml [fg:2]-[fg:2] [fg:2]J[fg:2]o[fg:2]e[fg:2] [fg:2]W[fg:2]i[fg:2]l[fg:2]m[bold,fg:1] [bold,fg:1]([bold,fg:1]r[bold,fg:1]e[bold,fg:1]f[bold,fg:1]s[bold,fg:1]/[bold,fg:1]s[bold,fg:1]t[bold,fg:1]a[bold,fg:1]s[bold,fg:1]h[bold,fg:1])
[fg:1]| [fg:1]|[fg:3]\
[fg:1]|[fg:1]/ [fg:3]/
[fg:1]| * [bold,fg:4]5[bold,fg:4]9[bold,fg:4]0[bold,fg:4]8[bold,fg:4]b[bold,fg:4]d[bold,fg:4]e - [bold,fg:2]([bold,fg:2]2[bold,fg:2] [bold,fg:2]d[bold,fg:2]a[bold,fg:2]y[bold,fg:2]s[bold,fg:2] [bold,fg:2]a[bold,fg:2]g[bold,fg:2]o[bold,fg:2]) index on master: d97996e Make bindings configurable f
rom alacritty.yml [fg:2]-[fg:2] [fg:2]J[fg:2]o[fg:2]e[fg:2] [fg:2]W[fg:2]i[fg:2]l[fg:2]m
[fg:1]|[fg:1]/
* [bold,fg:4]d[bold,fg:4]9[bold,fg:4]7[bold,fg:4]9[bold,fg:4]9[bold,fg:4]6[bold,fg:4]e - [bold,fg:2]([bold,fg:2]4[bold,fg:2] [bold,fg:2]d[bold,fg:2]a[bold,fg:2]y[bold,fg:2]s[bold,fg:2] [bold,fg:2]a[bold,fg:2]g[bold,fg:2]o[bold,fg:2]) Make bindings configurable from alacritty.yml [fg:2]-[fg:2] [fg:2]J[fg:2]o[fg:2]e[fg:2] [fg:2]W[fg:2]i[fg:2]l
[fg:2]m[bold,fg:1] [bold,fg:1]([bold,fg:1]o[bold,fg:1]r[bold,fg:1]i[bold,fg:1]g[bold,fg:1]i[bold,fg:1]n[bold,fg:1]/[bold,fg:1]m[bold,fg:1]a[bold,fg:1]s[bold,fg:1]t[bold,fg:1]e[bold,fg:1]r[bold,fg:1],[bold,fg:1] [bold,fg:1]o[bold,fg:1]r[bold,fg:1]i[bold,fg:1]g[bold,fg:1]i[bold,fg:1]n[bold,fg:1]/[bold,fg:1]b[bold,fg:1]i[bold,fg:1]n[bold,fg:1]d[bold,fg:1]i[bold,fg:1]n[bold,fg:1]g[bold,fg:1]s[bold,fg:1]-[bold,fg:1]v[bold,fg:1]2[bold,fg:1],[bold,fg:1] [bold,fg:1]o[bold,fg:1]r[bold,fg:1]i[bold,fg:1]g[bold,fg:1]i[bold,fg:1]n[bold,fg:1]/[bold,fg:1]H[bold,fg:1]E[bold,fg:1]A[bold,fg:1]D[bold,fg:1],[bold,fg:1] [bold,fg:1]m[bold,fg:1]a[bold,fg:1]s[bold,fg:1]t[bold,fg:1]e[bold,fg:1]r[bold,fg:1],[bold,fg:1] [bold,fg:1]b[bold,fg:1]i[bold,fg:1]n[bold,fg:1]d[bold,fg:1]i[bold,fg:1]n[bold,fg:1]g[bold,fg:1]s[bold,fg:1]-[bold,fg:1]v[bold,fg:1]2[bold,fg:1])
* [bold,fg:4]c[bold,fg:4]b[bold,fg:4]2[bold,fg:4]b[bold,fg:4]c[bold,fg:4]4[bold,fg:4]e - [bold,fg:2]([bold,fg:2]4[bold,fg:2] [bold,fg:2]d[bold,fg:2]a[bold,fg:2]y[bold,fg:2]s[bold,fg:2] [bold,fg:2]a[bold,fg:2]g[bold,fg:2]o[bold,fg:2]) Fix test for Cell layout [fg:2]-[fg:2] [fg:2]J[fg:2]o[fg:2]e[fg:2] [fg:2]W[fg:2]i[fg:2]l[fg:2]m
* [bold,fg:4]c[bold,fg:4]b[bold,fg:4]b[bold,fg:4]9[bold,fg:4]1[bold,fg:4]6[bold,fg:4]7 - [bold,fg:2]([bold,fg:2]5[bold,fg:2] [bold,fg:2]d[bold,fg:2]a[bold,fg:2]y[bold,fg:2]s[bold,fg:2] [bold,fg:2]a[bold,fg:2]g[bold,fg:2]o[bold,fg:2]) Redraw screen on focus [fg:2]-[fg:2] [fg:2]J[fg:2]o[fg:2]e[fg:2] [fg:2]W[fg:2]i[fg:2]l[fg:2]m
* [bold,fg:4]8[bold,fg:4]3[bold,fg:4]6[bold,fg:4]0[bold,fg:4]a[bold,fg:4]b[bold,fg:4]4 - [bold,fg:2]([bold,fg:2]8[bold,fg:2] [bold,fg:2]d[bold,fg:2]a[bold,fg:2]y[bold,fg:2]s[bold,fg:2] [bold,fg:2]a[bold,fg:2]g[bold,fg:2]o[bold,fg:2]) Fallback to received chars when no bindings [fg:2]-[fg:2] [fg:2]J[fg:2]o[fg:2]e[fg:2] [fg:2]W[fg:2]i[fg:2]l[fg:2]m
* [bold,fg:4]6[bold,fg:4]9[bold,fg:4]2[bold,fg:4]5[bold,fg:4]d[bold,fg:4]a[bold,fg:4]a - [bold,fg:2]([bold,fg:2]8[bold,fg:2] [bold,fg:2]d[bold,fg:2]a[bold,fg:2]y[bold,fg:2]s[bold,fg:2] [bold,fg:2]a[bold,fg:2]g[bold,fg:2]o[bold,fg:2]) Fix/add some keybindings [fg:2]-[fg:2] [fg:2]J[fg:2]o[fg:2]e[fg:2] [fg:2]W[fg:2]i[fg:2]l[fg:2]m
* [bold,fg:4]e[bold,fg:4]4[bold,fg:4]2[bold,fg:4]6[bold,fg:4]0[bold,fg:4]1[bold,fg:4]3 - [bold,fg:2]([bold,fg:2]8[bold,fg:2] [bold,fg:2]d[bold,fg:2]a[bold,fg:2]y[bold,fg:2]s[bold,fg:2] [bold,fg:2]a[bold,fg:2]g[bold,fg:2]o[bold,fg:2]) Fix alacritty shutdown when shell exits on macOS [fg:2]-[fg:2] [fg:2]J[fg:2]o[fg:2]e[fg:2] 
[fg:2]W[fg:2]i[fg:2]l[fg:2]m
* [bold,fg:4]8[bold,fg:4]c[bold,fg:4]b[bold,fg:4]d[bold,fg:4]7[bold,fg:4]6[bold,fg:4]8 - [bold,fg:2]([bold,fg:2]8[bold,fg:2] [bold,fg:2]d[bold,fg:2]a[bold,fg:2]y[bold,fg:2]s[bold,fg:2] [bold,fg:2]a[bold,fg:2]g[bold,fg:2]o[bold,fg:2]) Fix resize on macOS leaving screen blank [fg:2]-[fg:2] [fg:2]J[fg:2]o[fg:2]e[fg:2] [fg:2]W[fg:2]i[fg:2]l[fg:2]m
* [bold,fg:4]a[bold,fg:4]6[bold,fg:4]5[bold,fg:4]2[bold,fg:4]b[bold,fg:4]4[bold,fg:4]a - [bold,fg:2]([bold,fg:2]8[bold,fg:2] [bold,fg:2]d[bold,fg:2]a[bold,fg:2]y[bold,fg:2]s[bold,fg:2] [bold,fg:2]a[bold,fg:2]g[bold,fg:2]o[bold,fg:2]) Rustup [fg:2]-[fg:2] [fg:2]J[fg:2]o[fg:2]e[fg:2] [fg:2]W[fg:2]i[fg:2]l[fg:2]m
* [bold,fg:4]8[bold,fg:4]c[bold,fg:4]b[bold,fg:4]d[bold,fg:4]7[bold,fg:4]6[bold,fg:4]8 - [bold,fg:2]([bold,fg:2]8[bold,fg:2] [bold,fg:2]d[bold,fg:2]a[bold,fg:2]y[bold,fg:2]s[bold,fg:2] [bold,fg:2]a[bold,fg:2]g[bold,fg:2]o[bold,fg:2]) Fix resize
                                    on macOS leaving screen blank [fg:2]-[fg:2] [fg:2]J[fg:2]o[fg:2]e[fg:2] [fg:2]W[fg:2]i[fg:2]l[fg:2]m
* [bold,fg:4]a[bold,fg:4]6[bold,fg:4]5[bold,fg:4]2[bold,fg:4]b[bold,fg:4]4[bold,fg:4]a - [bold,fg:2]([bold,fg:2]8[bold,fg:2] [bold,fg:2]d[bold,fg:2]a[bold,fg:2]y[bold,fg:2]s[bold,fg:2] [bold,fg:2]a[bold,fg:2]g[bold,fg:2]o[bold,fg:2]) Rustup [fg:2]-[fg:2] [fg:2]J[fg:2]o[fg:2]e[fg:2] [fg:2]W[fg:2]i[fg:2]l[fg:2]m
:
[fg:0,bg:3]1[fg:0,bg:3]:[fg:0,bg:3]g[fg:0,bg:3]i[fg:0,bg:3]t[fg:0,bg:3]*[fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4]
