crates/emux-term/tests/snapshots/golden_tests__tmux_htop.snap
---
source: crates/emux-term/tests/golden_tests.rs
expression: result
---

  [fg:6]0[fg:6] [fg:6] [bold][[fg:2]|[fg:2]|[fg:2]|[fg:1]|[fg:1]|[fg:1]|[fg:1]|[bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0]2[bold,fg:0]0[bold,fg:0].[bold,fg:0]0[bold,fg:0]%[bold]]   [fg:6]T[fg:6]a[fg:6]s[fg:6]k[fg:6]s[fg:6]:[fg:6] [bold,fg:6]3[bold,fg:6]6[bold,fg:6]3[fg:6],[fg:6] [bold,fg:2]1[bold,fg:2]6[bold,fg:2]0[bold,fg:2]3[fg:2] [fg:2]t[fg:2]h[fg:2]r[fg:6];[fg:6] [bold,fg:2]1[fg:6] [fg:6]r[fg:6]u[fg:6]n[fg:6]n[fg:6]i[fg:6]n[fg:6]g
  [fg:6]1[fg:6] [fg:6] [bold][[fg:2]|[fg:1]|[bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0]5[bold,fg:0].[bold,fg:0]9[bold,fg:0]%[bold]]   [fg:6]L[fg:6]o[fg:6]a[fg:6]d[fg:6] [fg:6]a[fg:6]v[fg:6]e[fg:6]r[fg:6]a[fg:6]g[fg:6]e[fg:6]:[fg:6] [bold]1[bold].[bold]6[bold]1[bold] [bold,fg:6]1[bold,fg:6].[bold,fg:6]8[bold,fg:6]0[bold,fg:6] [fg:6]1[fg:6].[fg:6]7[fg:6]9[fg:6] 
  [fg:6]2[fg:6] [fg:6] [bold][[fg:2]|[fg:2]|[fg:2]|[fg:1]|[fg:1]|[bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0]1[bold,fg:0]3[bold,fg:0].[bold,fg:0]9[bold,fg:0]%[bold]]   [fg:6]U[fg:6]p[fg:6]t[fg:6]i[fg:6]m[fg:6]e[fg:6]:[fg:6] [bold,fg:6]2[bold,fg:6] [bold,fg:6]d[bold,fg:6]a[bold,fg:6]y[bold,fg:6]s[bold,fg:6],[bold,fg:6] [bold,fg:6]0[bold,fg:6]6[bold,fg:6]:[bold,fg:6]3[bold,fg:6]6[bold,fg:6]:[bold,fg:6]0[bold,fg:6]4
  [fg:6]3[fg:6] [fg:6] [bold][[fg:2]|[fg:2]|[fg:1]|[bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0]5[bold,fg:0].[bold,fg:0]9[bold,fg:0]%[bold]]
  [fg:6]M[fg:6]e[fg:6]m[bold][[fg:2]|[fg:2]|[fg:2]|[fg:2]|[fg:2]|[fg:2]|[fg:2]|[fg:2]|[fg:2]|[fg:2]|[fg:2]|[fg:2]|[fg:2]|[fg:2]|[fg:2]|[fg:2]|[fg:2]|[fg:2]|[fg:4]|[fg:4]9[fg:3].[fg:3]2[fg:3]9[fg:3]G[fg:3]/[fg:3]1[fg:3]6[fg:3].[fg:3]0[bold,fg:0]G[bold]]
  [fg:6]S[fg:6]w[fg:6]p[bold][[fg:1]|[fg:1]|[fg:1]|[fg:1]|[fg:1]|[fg:1]|[fg:1]|[fg:1]|[fg:1]|[fg:1]|[fg:1]|[fg:1]|[fg:1]|[fg:1]|[fg:1]|[bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0] [bold,fg:0]1[bold,fg:0]0[bold,fg:0]0[bold,fg:0]0[bold,fg:0]M[bold,fg:0]/[bold,fg:0]2[bold,fg:0].[bold,fg:0]0[bold,fg:0]0[bold,fg:0]G[bold]]

[fg:0,bg:2] [fg:0,bg:2] [fg:0,bg:2]P[fg:0,bg:2]I[fg:0,bg:2]D[fg:0,bg:2] [fg:0,bg:2]U[fg:0,bg:2]S[fg:0,bg:2]E[fg:0,bg:2]R[fg:0,bg:2] [fg:0,bg:2] [fg:0,bg:2] [fg:0,bg:2] [fg:0,bg:2] [fg:0,bg:2] [fg:0,bg:2]P[fg:0,bg:2]R[fg:0,bg:2]I[fg:0,bg:2] [fg:0,bg:2] [fg:0,bg:2]N[fg:0,bg:2]I[fg:0,bg:2] [fg:0,bg:2] [fg:0,bg:2]V[fg:0,bg:2]I[fg:0,bg:2]R[fg:0,bg:2]T[fg:0,bg:2] [fg:0,bg:2] [fg:0,bg:2] [fg:0,bg:2]R[fg:0,bg:2]E[fg:0,bg:2]S[fg:0,bg:2] [fg:0,bg:2]S[fg:0,bg:2] [fg:0,bg:6]C[fg:0,bg:6]P[fg:0,bg:6]U[fg:0,bg:6]%[fg:0,bg:6] [fg:0,bg:2]M[fg:0,bg:2]E[fg:0,bg:2]M[fg:0,bg:2]%[fg:0,bg:2] [fg:0,bg:2] [fg:0,bg:2] [fg:0,bg:2]T[fg:0,bg:2]I[fg:0,bg:2]M[fg:0,bg:2]E[fg:0,bg:2]+[fg:0,bg:2] [fg:0,bg:2] [fg:0,bg:2]C[fg:0,bg:2]o[fg:0,bg:2]m[fg:0,bg:2]m[fg:0,bg:2]a[fg:0,bg:2]n[fg:0,bg:2]d[fg:0,bg:2] [fg:0,bg:2] [fg:0,bg:2] [fg:0,bg:2] [fg:0,bg:2] [fg:0,bg:2] [fg:0,bg:2] [fg:0,bg:2] [fg:0,bg:2] [fg:0,bg:2] [fg:0,bg:2] [fg:0,bg:2] [fg:0,bg:2] [fg:0,bg:2] [fg:0,bg:2] [fg:0,bg:2] 
 1141 jwilm      26   0 [bold,fg:1]1[bold,fg:1]0[bold,fg:1].[bold,fg:1]5[bold,fg:1]G[bold,fg:1] [fg:6] [fg:6]2[fg:6]2[fg:6]7[fg:6]M[fg:6] [fg:2]R[fg:2]  0.8  0.3 11:35.17 target/release/alacritt
29598 jwilm      26   0 [bold,fg:1]1[bold,fg:1]0[bold,fg:1].[bold,fg:1]0[bold,fg:1]G[bold,fg:1] [fg:6] [fg:6]1[fg:6]3[fg:6]3[fg:6]M[fg:6] [fg:2]R[fg:2]  2.2  0.2  0:01.37 target/debug/alacritty
  580 jwilm      17   0 [fg:6]9[fg:6]7[fg:6]5[fg:6]2[fg:6]M[fg:6] [fg:6]5[fg:6]9344 [fg:2]R[fg:2]  0.8  0.1  7:39.16 tmux
29240 jwilm      17   0 [bold,fg:1]1[bold,fg:1]3[bold,fg:1].[bold,fg:1]6[bold,fg:1]G[bold,fg:1] [fg:6] [fg:6]8[fg:6]2[fg:6]9[fg:6]M[fg:6] [fg:2]R[fg:2]  0.2  1.3  0:59.49 /Applications/Google Ch
29220 jwilm      17   0 [bold,fg:1]1[bold,fg:1]3[bold,fg:1].[bold,fg:1]2[bold,fg:1]G[bold,fg:1] [fg:6] [fg:6]5[fg:6]8[fg:6]6[fg:6]M[fg:6] [fg:2]R[fg:2]  0.4  0.9  0:14.83 /Applications/Google Ch
[fg:0,bg:6] [fg:0,bg:6] [fg:0,bg:6]9[fg:0,bg:6]2[fg:0,bg:6]3[fg:0,bg:6] [fg:0,bg:6]j[fg:0,bg:6]w[fg:0,bg:6]i[fg:0,bg:6]l[fg:0,bg:6]m[fg:0,bg:6] [fg:0,bg:6] [fg:0,bg:6] [fg:0,bg:6] [fg:0,bg:6] [fg:0,bg:6] [fg:0,bg:6]1[fg:0,bg:6]7[fg:0,bg:6] [fg:0,bg:6] [fg:0,bg:6] [fg:0,bg:6]0[fg:0,bg:6] [fg:0,bg:6]1[fg:0,bg:6]5[fg:0,bg:6].[fg:0,bg:6]6[fg:0,bg:6]G[fg:0,bg:6] [fg:0,bg:6]1[fg:0,bg:6]8[fg:0,bg:6]0[fg:0,bg:6]0[fg:0,bg:6]M[fg:0,bg:6] [fg:0,bg:6]R[fg:0,bg:6] [fg:0,bg:6] [fg:0,bg:6]3[fg:0,bg:6].[fg:0,bg:6]7[fg:0,bg:6] [fg:0,bg:6] [fg:0,bg:6]2[fg:0,bg:6].[fg:0,bg:6]7[fg:0,bg:6] [fg:0,bg:6]5[fg:0,bg:6]1[fg:0,bg:6]:[fg:0,bg:6]5[fg:0,bg:6]0[fg:0,bg:6].[fg:0,bg:6]9[fg:0,bg:6]4[fg:0,bg:6] [fg:0,bg:6]/[fg:0,bg:6]A[fg:0,bg:6]p[fg:0,bg:6]p[fg:0,bg:6]l[fg:0,bg:6]i[fg:0,bg:6]c[fg:0,bg:6]a[fg:0,bg:6]t[fg:0,bg:6]i[fg:0,bg:6]o[fg:0,bg:6]n[fg:0,bg:6]s[fg:0,bg:6]/[fg:0,bg:6]G[fg:0,bg:6]o[fg:0,bg:6]o[fg:0,bg:6]g[fg:0,bg:6]l[fg:0,bg:6]e[fg:0,bg:6] [fg:0,bg:6]C[fg:0,bg:6]h
29826 jwilm      24   0 [fg:6]9[fg:6]6[fg:6]2[fg:6]1[fg:6]M[fg:6] [fg:6] [fg:6]7408 [fg:2]R[fg:2]  0.3  0.0  0:00.12 htop
22141 jwilm      17   0 [bold,fg:1]1[bold,fg:1]3[bold,fg:1].[bold,fg:1]3[bold,fg:1]G[bold,fg:1] [fg:6] [fg:6]5[fg:6]1[fg:6]7[fg:6]M[fg:6] [fg:2]R[fg:2]  0.2  0.8  1:05.40 /Applications/Google Ch
19930 jwilm      17   0 [bold,fg:1]1[bold,fg:1]3[bold,fg:1].[bold,fg:1]2[bold,fg:1]G[bold,fg:1] [fg:6] [fg:6]5[fg:6]8[fg:6]8[fg:6]M[fg:6] [fg:2]R[fg:2]  0.3  0.9  1:00.37 /Applications/Google Ch
13248 jwilm      17   0 [bold,fg:1]1[bold,fg:1]3[bold,fg:1].[bold,fg:1]8[bold,fg:1]G[bold,fg:1] [fg:6] [fg:6]4[fg:6]4[fg:6]6[fg:6]M[fg:6] [fg:2]R[fg:2]  0.2  0.7  6:24.47 /Applications/Google Ch
  396 jwilm      17   0 [bold,fg:1] [bold,fg:1]9[bold,fg:1].[bold,fg:1]8[bold,fg:1]G[bold,fg:1] [fg:6]7[fg:6]4240 [fg:2]R[fg:2]  0.2  0.1  3:06.16 /System/Library/CoreSer
  433 jwilm      17   0 [bold,fg:1] [bold,fg:1]9[bold,fg:1].[bold,fg:1]7[bold,fg:1]G[bold,fg:1] [fg:6]4[fg:6]5856 [fg:2]R[fg:2]  0.2  0.1  2:35.99 /Applications/Karabiner
23390 jwilm      17   0 [bold,fg:1]1[bold,fg:1]1[bold,fg:1].[bold,fg:1]4[bold,fg:1]G[bold,fg:1] [fg:6] [fg:6]2[fg:6]5[fg:6]0[fg:6]M[fg:6] [fg:2]R[fg:2]  0.1  0.4  0:53.99 /Applications/Spotify.a
F1[fg:0,bg:6]H[fg:0,bg:6]e[fg:0,bg:6]l[fg:0,bg:6]p[fg:0,bg:6] [fg:0,bg:6] F2[fg:0,bg:6]S[fg:0,bg:6]e[fg:0,bg:6]t[fg:0,bg:6]u[fg:0,bg:6]p[fg:0,bg:6] F3[fg:0,bg:6]S[fg:0,bg:6]e[fg:0,bg:6]a[fg:0,bg:6]r[fg:0,bg:6]c[fg:0,bg:6]hF4[fg:0,bg:6]F[fg:0,bg:6]i[fg:0,bg:6]l[fg:0,bg:6]t[fg:0,bg:6]e[fg:0,bg:6]rF5[fg:0,bg:6]T[fg:0,bg:6]r[fg:0,bg:6]e[fg:0,bg:6]e[fg:0,bg:6] [fg:0,bg:6] F6[fg:0,bg:6]S[fg:0,bg:6]o[fg:0,bg:6]r[fg:0,bg:6]t[fg:0,bg:6]B[fg:0,bg:6]yF7[fg:0,bg:6]N[fg:0,bg:6]i[fg:0,bg:6]c[fg:0,bg:6]e[fg:0,bg:6] [fg:0,bg:6]-F8[fg:0,bg:6]N[fg:0,bg:6]i[fg:0,bg:6]c[fg:0,bg:6]e[fg:0,bg:6] [fg:0,bg:6]+F9[fg:0,bg:6]K[fg:0,bg:6]i[fg:0,bg:6]l[fg:0,bg:6]l[fg:0,bg:6] [fg:0,bg:6] F10[fg:0,bg:6]Q[fg:0,bg:6]u[fg:0,bg:6]i[fg:0,bg:6]t[fg:0,bg:6] 
[fg:0,bg:3]1[fg:0,bg:3]:[fg:0,bg:3]h[fg:0,bg:3]t[fg:0,bg:3]o[fg:0,bg:3]p[fg:0,bg:3]*[fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4] [fg:0,bg:4]
