crates/emux-term/tests/snapshots/golden_tests__vttest_insert.snap
---
source: crates/emux-term/tests/golden_tests.rs
expression: result
---
A******************************************************************************B


Test of 'Insert Mode'. The top line should be 'A*** ... ***B'. Push <RETURN>
