crates/emux-term/tests/snapshots/golden_tests__vttest_origin_mode_1.snap
---
source: crates/emux-term/tests/golden_tests.rs
expression: result
---






















This line should be the one above the bottom of the screen. Push <RETURN>
Origin mode test. This line should be at the bottom of the screen.
