crates/emux-term/tests/snapshots/golden_tests__vttest_origin_mode_2.snap
---
source: crates/emux-term/tests/golden_tests.rs
expression: result
---
This line should be at the top of the screen. Push <RETURN>






















Origin mode test. This line should be at the bottom of the screen.
